# echo-tts

./: .dockerignore  README.md  dockerfile  inference.py  pyproject.toml  requirements.txt
