[project]
name = "echo-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "einops>=0.8.2",
    "gradio==5.49.1",
    "huggingface-hub>=1.4.1",
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "safetensors>=0.7.0",
    "soundfile>=0.13.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
